added some more content (Including style.css)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<html lang="en">
+<head>
+<title>Euan Gannon</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<style>
+body {font-family: "Lato", sans-serif;background-color: #ccc}
+</style>
+
+<div class="euan-bar euan-dark-grey">
+  <a class="euan-bar-item euan-button euan-padding-large" href="#home">Home</a>
+  <a class="euan-bar-item euan-button euan-padding-large" href="#about">About</a>
+  <a class="euan-bar-item euan-button euan-padding-large" href="#contact">Contact</a>
+  <div class="euan-dropdown-hover euan-hide-small">
+    <button class="euan-padding-large euan-button">Socials <i class="fa fa-caret-down"></i></button>
+    <div class="euan-dropdown-content euan-bar-block euan-card-4">
+      <a href="https://instagram.com/euan_gannon" target="_blank" class="euan-bar-item euan-button">Instagram</a>
+      <a href="https://youtube.com/c/UC2ERCmAx_CT4WFRUvt4ty5A" target="_blank" class="euan-bar-item euan-button">YouTube</a>
+    </div>
+
+</div>
+</div>
+
+
+<!-- Page content -->
+<div class="euan-content" style="max-width:2000px">
+
+<!-- Home Section -->
+<div class="euan-grey">
+  <div class="euan-content euan-center euan-padding-64" style="max-width:800px" id="home">
+    <h2 class="euan-wide">EUAN GANNON</h2>
+    <p class="euan-opacity"><i>Professional Web Designer and Developer</i></p>
+    <p class="euan-justify euan-center">Hey there, my name is Euan, and I am a professional website designer & developer, and this website tells you all about me, and how you can hire me to code you a website for yourself or your business!</p>
+    <button class="euan-margin-top euan-center-btn euan-padding-16 euan-button euan-dark-grey euan-text-white euan-round-large">READ MORE</button>
+  </div>
+</div>
+<div class="euan-content euan-center euan-padding-64" style="max-width:800px" id="specialize">
+    <div class="icon-card euan-padding-16">
+        <i class="fa fa-code" style="font-size:150px"></i>
+        <hr style="border-color:black;">
+        <h4 class="icon-text"><strong>I am an experienced website developer</strong></h4>
