Redone lots of pages etc

--- a/index.html
+++ b/index.html
@@ -1,46 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Euan Gannon</title>
+<title>Home | Euan Gannon</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="assets\css\style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://kit.fontawesome.com/dc42251914.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <style>
-body {font-family: "Lato", sans-serif;background-color: #ccc}
+body {font-family: "Lato", sans-serif}
 </style>
+<script language="JavaScript" Type="text/javascript">
+<!--
+function popupMsg(theMsg) {
+alert(theMsg);
+}
+//-->
+</script>
+</head>
+<body>
 
-<div class="euan-bar euan-dark-grey">
-  <a class="euan-bar-item euan-button euan-padding-large" href="#home">Home</a>
-  <a class="euan-bar-item euan-button euan-padding-large" href="#about">About</a>
-  <a class="euan-bar-item euan-button euan-padding-large" href="#contact">Contact</a>
-  <div class="euan-dropdown-hover euan-hide-small">
-    <button class="euan-padding-large euan-button">Socials <i class="fa fa-caret-down"></i></button>
-    <div class="euan-dropdown-content euan-bar-block euan-card-4">
-      <a href="https://instagram.com/euan_gannon" target="_blank" class="euan-bar-item euan-button">Instagram</a>
-      <a href="https://youtube.com/c/UC2ERCmAx_CT4WFRUvt4ty5A" target="_blank" class="euan-bar-item euan-button">YouTube</a>
+<!-- Navbar -->
+<div class="euan-top">
+  <div class="euan-bar euan-black euan-card">
+
+
+    <!-- Alert Box -->
+
+<!--    <div class="alertbox">
+      <i class="fa fa-exclamation-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
+      <strong> Notice:</strong> Our site is currently under development.
     </div>
 
+   <div class="alertbox success">
+      <i class="fa fa-check-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
+      <strong> Success!</strong> Our site is now fully complete.
+    </div>
+
+    <div class="alertbox info">
+      <i class="fa fa-info-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
+      <strong> Did you know?</strong> We have an <a href="https://instagram.com/detail_car_care_uk" target="_blank" class="euan-text-red">Instagram</a> page.
+    </div>
+-->
+
+    <div class="alertbox warning euan-text-black">
+      <i class="fa fa-times-circle"></i><span class="closealert-black" onclick="this.parentElement.style.display='none';">&times;</span>
+      <strong> Warning!</strong> We may face some downtime, since our site is currently under development.
+    </div>
+
+
+    <a class="navbar-brand" href="#">
+      <img src="assets\img\profile-white.png" alt="logo" style="width:60px;" oncontextmenu="popupMsg('This image is Copyrighted - Euan Gannon 2021')" style="width:100%;">
+    </a>
+    <a href="#about" class="euan-bar-item euan-button euan-padding-large">ABOUT</a>
+    <a href="#examples" class="euan-bar-item euan-button euan-padding-large">EXAMPLES</a>
+    <a href="#footer" class="euan-bar-item euan-button euan-padding-large">FOOTER</a>
+  </div>
 </div>
-</div>
+
 
 
 <!-- Page content -->
-<div class="euan-content" style="max-width:2000px">
+<div class="euan-content" style="max-width:2000px;margin-top:46px">
 
-<!-- Home Section -->
-<div class="euan-grey">
-  <div class="euan-content euan-center euan-padding-64" style="max-width:800px" id="home">
-    <h2 class="euan-wide">EUAN GANNON</h2>
-    <p class="euan-opacity"><i>Professional Web Designer and Developer</i></p>
-    <p class="euan-justify euan-center">Hey there, my name is Euan, and I am a professional website designer & developer, and this website tells you all about me, and how you can hire me to code you a website for yourself or your business!</p>
-    <button class="euan-margin-top euan-center-btn euan-padding-16 euan-button euan-dark-grey euan-text-white euan-round-large">READ MORE</button>
+  <div class="euan-display-container euan-center">
+    <img src="assets\img\test1.jpg" oncontextmenu="popupMsg('This image is Copyrighted - Euan Gannon 2021')" style="width:100%;">
+
+    <div class="euan-hover-opacity euan-display-middle euan-container euan-text-white euan-padding-32">
+      <img src="assets\img\cover-white.png" style="width:100%" oncontextmenu="popupMsg('This image is Copyrighted - Euan Gannon 2021')">
+    </div>
+  </div>
+
+<div class="euan-white" id="about">
+  <div class="euan-content euan-center euan-padding-64" style="max-width:800px;">
+    <hr style="height:0;border:1px solid #000;width:500px;margin-left:145px">
+      <h2 class="euan-wide">ABOUT ME</h2>
+        <hr style="height:0;border:1px solid #000;width:500px;margin-left:145px">
+      <p class="euan-justify euan-center">I am a technically skilled individual with excellent comunication skills for your Website Development and Design needs. I can troubleshoot website bugs, and provide fast-paced customer support, among other specialities. As well as this, I can recieve custom orders to fit your desire.</p>
   </div>
 </div>
-<div class="euan-content euan-center euan-padding-64" style="max-width:800px" id="specialize">
-    <div class="icon-card euan-padding-16">
-        <i class="fa fa-code" style="font-size:150px"></i>
-        <hr style="border-color:black;">
-        <h4 class="icon-text"><strong>I am an experienced website developer</strong></h4>
+<div class="euan-blue" id="specialize">
+  <hr style="border:0;height:0;box-shadow:0 2px 5px 1px #000;">
+  <div class="euan-content euan-center euan-padding-64" style="max-width:800px">
+    <div class="euan-content euan-display-container">
+      <div class="icon-card euan-padding-16 mySlides">
+          <i class="fa fa-file-code" style="font-size:150px;color:black"></i>
+          <hr style="border-color:black;">
+          <h4 class="icon-title"><strong>I am a professional website developer</strong></h4>
+      </div>
+      <div class="icon-card euan-padding-16 mySlides">
+          <i class="fa fa-paint-brush" style="font-size:150px;color:black"></i>
+          <hr style="border-color:black;">
+          <h4 class="icon-title"><strong>I am an experienced graphics designer</strong></h4>
+      </div>
+      <div class="icon-card euan-padding-16 mySlides">
+          <i class="fa fa-comments" style="font-size:150px;color:black"></i>
+          <hr style="border-color:black;">
+          <h4 class="icon-title"><strong>I have great communication skills</strong></h4>
+      </div>
+      <div class="icon-card euan-padding-16 mySlides">
+          <i class="fas fa-money-bill-wave" style="font-size:150px;color:black"></i>
+          <hr style="border-color:black;">
+          <h4 class="icon-title"><strong>I offer a reasonable price</strong></h4>
+      </div>
+
+      <button class="euan-button euan-black euan-display-left" style="border-radius:50px" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="euan-button euan-black euan-display-right" style="border-radius:50px" onclick="plusDivs(1)">&#10095;</button>
+    </div>
+  </div>
+</div>
+
+<!--
+
+
+
+The Recent Projects Section
+
+
+
+-->
+<div class="examples123 euan-orange" id="examples">
+  <div class="euan-container euan-content euan-padding-64" style="max-width:800px">
+    <h2 class="euan-wide euan-center">EXAMPLE ELEMENTS</h2>
+    <p class="euan-center"><i>Check out my Example Elements Here!</i></p><br>
+
+
+    <ul class="euan-ul euan-border euan-deep-orange euan-text-black">
+      <li class="euan-padding"><del>Janurary</del> <span class="euan-tag euan-orange euan-text-black euan-margin-left">Out-Dated</span></li>
+      <li class="euan-padding"><del>February</del> <span class="euan-tag euan-orange euan-text-black euan-margin-left">Out-Dated</span></li>
+      <li class="euan-padding">March <span class="euan-badge euan-orange euan-margin-left">3</span></li>
+    </ul>
+
+    <div class="euan-row-padding euan-padding-32" style="margin:0 -16px">
+      <div class="euan-third euan-margin-bottom">
+        <div class="euan-container euan-border euan-deep-orange euan-text-black">
+          <p><b>Example PopUp Menu</b></p>
+          <p>Info about the Menu...</p>
+          <button class="euan-button-norm euan-button euan-orange euan-border euan-hover-shadow euan-margin-bottom" onclick="document.getElementById('testMenu').style.display='block'">Read More</button>
+        </div>
+      </div>
+      <h3 class="popup" onclick="popupIcon()">Left Click me to make Pop-Up Text Appear
+        <span class="popuptext" id="myPopup">Some Pop-Up Text!</span>
+      </h3>
+
+      <script>
+      // When the user clicks on div, open the popup
+      function popupIcon() {
+        var popup = document.getElementById("myPopup");
+        popup.classList.toggle("show");
+      }
+      </script>
+    </div>
+    <div class="center1">
+        <p><b>Example Image (Right Click)</b></p>
+        <img src="assets\img\blur_image.jpg" class="euan-round-large euan-border" alt="blur_image" style="width:50%;" onContextMenu="popupMsg('This image is Copyrighted - Euan Gannon 2021')">
+
+    </div>
+
+  </div>
+
+<!-- testMenu -->
+
+<div id="testMenu" class="euan-modal">
+  <div class="euan-modal-content euan-animate-top euan-card-4">
+    <header class="euan-container euan-dark-grey euan-center euan-padding-32">
+      <h2 class="euan-wide"><i class="fa fa-car euan-margin-right"></i>Example Menu</h2>
+    </header>
+    <div class="euan-container">
+      <p><label><i class="fa fa-info josefinsans"></i> About This Menu...</label></p>
+      <button class="euan-button euan-block euan-red euan-padding-16 euan-section euan-right euan-round-large" onclick="document.getElementById('testMenu').style.display='none'">CLOSE <i class="fa fa-remove"></i></button>
+      <p class="euan-right">More on my <a href="https://fiverr.com/euan_gannon" target="_blank" class="euan-text-blue">Fiverr</a></p>
+    </div>
+  </div>
+</div>
+
+
+<!--
+
+ Footer
+
+ -->
+<div class="euan-white" id="footer">
+  <footer class="euan-container euan-padding-64 euan-center euan-content euan-xlarge euan-opacity">
+  <a class="fa fa-facebook-official euan-hover-opacity" href="https://facebook.com/" target="_blank"></a>
+  <a class="fa fa-instagram euan-hover-opacity" href="https://instagram.com/" target="_blank"></a>
+  <a class="fa fa-youtube euan-hover-opacity" href="https://youtube.com/" target="_blank"></a>
+  <a class="fa fa-map euan-hover-opacity" href="https://maps.google.com/" target="_blank"></a>
+  <p class="euan-medium">Designed & Developed by <b>Euan Gannon</b></p>
+  </footer>
+</div>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
+
+</body>
+</html>
