--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <style>
 body {font-family: "Lato", sans-serif}
 </style>
+
+<!-- PopUp Message -->
 <script language="JavaScript" Type="text/javascript">
-<!--
+
 function popupMsg(theMsg) {
 alert(theMsg);
 }
-//-->
+
 </script>
+
 </head>
 <body>
 
