--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ alert(theMsg);
       <i class="fa fa-info-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
       <strong> Did you know?</strong> We have an <a href="https://instagram.com/detail_car_care_uk" target="_blank" class="euan-text-red">Instagram</a> page.
     </div>
--->
+
 
     <div class="alertbox warning euan-text-black">
       <i class="fa fa-times-circle"></i><span class="closealert-black" onclick="this.parentElement.style.display='none';">&times;</span>
       <strong> Warning!</strong> We may face some downtime, since our site is currently under development.
-    </div>
+    </div> -->
 
 
     <a class="navbar-brand" href="#">
@@ -58,7 +58,7 @@ alert(theMsg);
     </a>
     <a href="#about" class="euan-bar-item euan-button euan-padding-large">ABOUT</a>
     <a href="#examples" class="euan-bar-item euan-button euan-padding-large">EXAMPLES</a>
-    <a href="#footer" class="euan-bar-item euan-button euan-padding-large">FOOTER</a>
+    <a href="#services" class="euan-bar-item euan-button euan-padding-large">SERVICES</a>
   </div>
 </div>
 
