Updated footer ID

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ The Recent Projects Section
  Footer
 
  -->
-<div class="euan-white" id="footer">
+<div class="euan-white" id="services">
   <footer class="euan-container euan-padding-64 euan-center euan-content euan-xlarge euan-opacity">
   <a class="fa fa-facebook-official euan-hover-opacity" href="https://facebook.com/" target="_blank"></a>
   <a class="fa fa-instagram euan-hover-opacity" href="https://instagram.com/" target="_blank"></a>
