--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@ alert(theMsg);
 
     <!-- Alert Box -->
 
-<!--    <div class="alertbox">
+    <div class="alertbox">
       <i class="fa fa-exclamation-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
       <strong> Notice:</strong> Our site is currently under development.
     </div>
 
+    <!--
    <div class="alertbox success">
       <i class="fa fa-check-circle"></i><span class="closealert" onclick="this.parentElement.style.display='none';">&times;</span>
       <strong> Success!</strong> Our site is now fully complete.
